--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -17,6 +17,7 @@
     --seperator-height: 1px;
     --header-height: 50px;
     --sidebar-width: 250px;
+    --sidebar-width-collapsed: 40px;
     --padding: 10px;
     --transition-duration: 500ms;
     --size-sm: 20px;
