--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -137,7 +137,7 @@
             margin: 5px 0;
             display: none;
 
-            &--active {
+            &--opened {
                 display: block;
             }
 
@@ -183,10 +183,56 @@
         & .sidebar__body__sub-menu {
             display: none;
         }
+
+        //why the ~ is needed
+        & ~ .activity-center {
+            width: var(--sidebar-width-collapsed);
+        }
     }
 
     &:hover .sidebar__header__toggle {
         opacity: 1;
         visibility: visible;
+    }
+}
+
+.activity-center {
+    background-color: var(--clr-primary-100);
+    width: calc(var(--sidebar-width) - calc(var(--padding) * 2));
+    height: 100px;
+    position: absolute;
+    bottom: var(--padding);
+    left: var(--padding);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: bottom var(--transition-duration), left var(--transition-duration), width var(--transition-duration),
+        height var(--transition-duration), translate var(--transition-duration);
+
+    &--active {
+        bottom: 50%;
+        left: 50%;
+        translate: -50% 50%;
+
+        // hard-coded
+        width: 500px !important; //a way to remove > !important
+        height: 400px;
+    }
+
+    @media (max-width: 700px) {
+        width: 40%;
+        height: calc((var(--header-height) - var(--padding)) - (var(--padding) / 2));
+        background-color: rgb(0 0 0 / 0.2);
+        top: calc(var(--padding) / 2);
+        left: 50%;
+        translate: -50% 0;
+
+        &--active {
+            translate: -50% 0;
+            background-color: var(--clr-secondary-100);
+            border: 2px solid var(--clr-primary-100);
+            top: 15%;
+            width: 80% !important;
+            height: 60%;
+        }
     }
 }
