--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,14 +23,11 @@ body {
     .sidebar {
         background-color: var(--clr-white);
         border-right: var(--seperator-height) solid var(--clr-seperator-color);
-        // position: relative;
     }
 
     // small screens
     @media (max-width: 700px) {
-        body {
-            background-color: var(--clr-primary-100);
-        }
+        background-color: var(--clr-primary-100);
 
         .sidebar {
             display: none;
@@ -38,6 +35,10 @@ body {
 
         header.header {
             background-color: var(--clr-primary-100);
+        }
+
+        main.main {
+            background-color: var(--clr-white);
         }
     }
 }
