--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -13,7 +13,7 @@
         display: flex;
         align-items: center;
         height: var(--header-height);
-        border-bottom: var(--seperator-height) solid var(--clr-seperator-color);
+        border-bottom: var(--seperator-height) solid var(--clr-seperator);
         padding: var(--padding);
         position: relative;
 
