--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -1,6 +1,7 @@
 :root {
     // border raduis
     --border-raduis-sm: 5px;
+    --border-raduis-xmed: 8px;
     --border-raduis-med: 10px;
     --border-raduis-lg: 20px;
     --border-raduis-xlg: 40px;
@@ -11,7 +12,8 @@
 
     // box shadow
     --box-shadow: 0 0 10px 2px rgba(0 0 0 / 0.2);
-    --box-shadow-ds: 0 0 0 1000px rgba(0 0 0 / 0.2);
+    --box-shadow-ds: 0 0 0 1000px rgba(0 0 0 / 0.2); // box-shadow-drop-shadow
+    // --box-shadow-ds: 0 0 0 200vw rgba(0 0 0 / 0.2); // box-shadow-drop-shadow
 
     // laytout
     --seperator-height: 1px;
@@ -19,7 +21,10 @@
     --sidebar-width: 250px;
     --sidebar-width-collapsed: 40px;
     --padding: 10px;
+    --gap: 10px;
     --transition-duration: 500ms;
-    --size-sm: 20px;
+    --size-xsm: 20px;
+    --size-sm: 30px;
+    --size-xmed: 35px;
     --size-med: 40px;
 }
