--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,9 +9,11 @@
 @use "layout/sidebar";
 
 @use "pages/login";
+@use "pages/scoreboard";
 
 body {
     display: flex;
+    position: relative;
 
     .main,
     header.header {
@@ -49,4 +51,57 @@ body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+}
+
+.preloader-overlay {
+    background-color: var(--clr-secondary-100);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .lds-facebook {
+        display: inline-block;
+        position: relative;
+        width: 80px;
+        height: 80px;
+
+        & div {
+            display: inline-block;
+            position: absolute;
+            left: 8px;
+            width: 16px;
+            background: var(--clr-primary-100);
+            animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+
+            &:nth-child(1) {
+                left: 8px;
+                animation-delay: -0.24s;
+            }
+            &:nth-child(2) {
+                left: 32px;
+                animation-delay: -0.12s;
+            }
+            &:nth-child(3) {
+                left: 56px;
+                animation-delay: 0;
+            }
+        }
+    }
+}
+
+// animation
+
+@keyframes lds-facebook {
+    0% {
+        top: 8px;
+        height: 64px;
+    }
+    50%,
+    100% {
+        top: 24px;
+        height: 32px;
+    }
 }
