--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -21,6 +21,7 @@
     --sidebar-width: 250px;
     --sidebar-width-collapsed: 40px;
     --padding: 10px;
+    --padding-med: 20px;
     --gap: 10px;
     --transition-duration: 500ms;
     --size-xsm: 20px;
