socrebaord partner details

--- a/scss/abstract/_colors.scss
+++ b/scss/abstract/_colors.scss
@@ -11,7 +11,7 @@ $colors: (
 
     secondary: (
         //brightest
-        100: #f2f2ff,
+        100: #e7e7f7,
         // 200: #c2c2cc,
         // 300: #919199,
         // 400: #616166,
@@ -21,7 +21,7 @@ $colors: (
 
     nutral: (
         //brightest
-        100: #fcfcfc,
+        100: #f0e4e4,
         // 200: #eeeeee,
         // 300: #dddddd,
         // 400: #616166,
