--- a/scss/abstract/_colors.scss
+++ b/scss/abstract/_colors.scss
@@ -6,17 +6,17 @@ $colors: (
         // 300: #323094,
         // 400: #212063,
         // 500: #111031,
-        //darkest,,,,,,,,,,
+        //darkest,,,,,,,,,,,
     ),
 
     secondary: (
         //brightest
-        100: #e7e7f7,
+        100: #f2f2ff,
         // 200: #c2c2cc,
         // 300: #919199,
         // 400: #616166,
         // 500: #303033,
-        //darkest,,,,,,,,,
+        //darkest,,,,,,,,,,
     ),
 
     nutral: (
@@ -26,7 +26,7 @@ $colors: (
         // 300: #dddddd,
         // 400: #616166,
         // 500: #222222,
-        //darkest,,,,,,,,,
+        //darkest,,,,,,,,,,
     ),
 
     danger: (
@@ -36,7 +36,7 @@ $colors: (
         // 300: #993333,
         // 400: #802b2b,
         // 500: #331111,
-        //darkest,,,,,,,,,
+        //darkest,,,,,,,,,,
     ),
 
     success: (
@@ -46,7 +46,7 @@ $colors: (
         // 300: #186429,
         // 400: #10431c,
         // 500: #08210e,
-        //darkest,,,,,,,,,
+        //darkest,,,,,,,,,,
     ),
 
     warning: (
@@ -56,7 +56,7 @@ $colors: (
         // 300: #186429,
         // 400: #10431c,
         // 500: #08210e,
-        //darkest,,,,,,,,,
+        //darkest,,,,,,,,,,
     ),
 );
 
