--- a/scss/pages/_scoreboard.scss
+++ b/scss/pages/_scoreboard.scss
@@ -187,25 +187,19 @@
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    // max-width: 90%;
-    min-width: 80%;
-    // min-height: 0%;
+    width: 80%;
     z-index: 33;
     border-radius: 10px;
     padding: 20px;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 20px;
 
     &__banner {
-        // border: 2px solid;
-        // flex-shrink: 0;
-        flex: 1;
         border-radius: 10px;
         background-color: var(--clr-primary-100);
-        padding: 20px 20px;
+        padding: var(--padding-med);
         display: flex;
-        // flex-direction: column;
         align-items: center;
         color: white;
 
@@ -225,15 +219,12 @@
             flex-direction: column;
 
             &__title {
-                // background-color: red;
-
                 font-weight: 600;
             }
         }
 
         &__points {
             margin-left: auto;
-            // background-color: red;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -246,16 +237,13 @@
     }
 
     &__details {
-        flex: 2;
-        // border: 2px red solid;
+        flex-grow: 1;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        // grid-template-rows: ;
         gap: 12px;
 
         &__detailbox {
-            // border: 2px solid;
-            box-shadow: var(--box-shadow);
+            border: 2px solid var(--clr-secondary-100);
             border-radius: 10px;
             height: 60px;
             display: flex;
@@ -264,7 +252,7 @@
             gap: var(--gap);
 
             &__icon {
-                background-color: var(--clr-nutral-100);
+                background-color: var(--clr-secondary-100);
                 border-radius: var(--border-raduis-xmed);
                 display: flex;
                 align-items: center;
@@ -291,5 +279,23 @@
             max-height: 300px;
             overflow-y: auto;
         }
+    }
+
+    &--active {
+        display: flex;
+    }
+}
+
+.banner-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 0.2);
+    // background-color: red;
+    z-index: 23;
+    display: none;
+
+    &--active {
+        display: block;
     }
 }
