--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -433,6 +433,7 @@ header.header {
             display: none;
             border-radius: 10px;
             box-shadow: var(--box-shadow);
+            background-color: var(--clr-white);
 
             li {
                 width: 100%;
