--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -284,9 +284,6 @@ header.header {
         display: none;
     }
 
-    &--active {
-    }
-
     @media (max-width: 700px) {
         // width: 400px;
         // when closed
@@ -304,84 +301,157 @@ header.header {
             overflow: hidden;
 
             & .mobile-content {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding: calc(var(--padding) * 2);
-                gap: var(--gap);
-                width: 100%;
-                height: 100%;
-
-                > * {
-                    width: 100%;
-                    // border: 2px solid red;
-                }
-
-                &__hotkeys {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    gap: var(--gap);
-
-                    > i {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        border-radius: var(--border-raduis-xmed);
-                        width: var(--size-xmed);
-                        height: var(--size-xmed);
-                        background-color: var(--clr-primary-100);
-                        color: var(--clr-white);
-                        font-size: 1.1rem;
-                    }
-                }
-
-                &__btn {
-                    padding: 10px 0;
-                    background-color: var(--clr-primary-100);
-                    color: var(--clr-white);
-                    border-radius: var(--border-raduis-xmed);
-                }
-
-                &__uploaded-btn {
-                    background-color: transparent;
-                    display: flex;
-                    gap: var(--gap);
-                    align-items: center;
-                    justify-content: center;
-                    width: fit-content;
-                    font-size: 0.8rem;
-                }
-
-                &__uploaded-files {
-                    display: flex;
-                    flex-direction: column;
-                    gap: calc(var(--gap) / 2);
-
-                    li {
-                        width: 100%;
-                        background-color: #fff;
-                        display: flex;
-                        align-items: center;
-                        padding: 5px;
-                        border-radius: 5px;
-
-                        img {
-                            width: var(--size-sm);
-                            height: var(--size-sm);
-                        }
-
-                        span {
-                            margin-left: 10px;
-                        }
-
-                        i {
-                            margin: 0 10px 0 auto;
-                        }
-                    }
-                }
             }
             //code here
+        }
+    }
+}
+
+.activity-center-mobile {
+    @media (min-width: 700px) {
+        display: none;
+    }
+
+    background-color: rgb(0 0 0 / 0.2);
+    top: calc(var(--padding) / 2);
+    left: 50%;
+    translate: -50%;
+    position: absolute;
+    width: 40%;
+    max-height: calc((var(--header-height) - var(--padding)) - (var(--padding) / 2));
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: var(--border-raduis-med);
+    // border: 2px solid #41ff41;
+    cursor: pointer;
+
+    transition: all var(--transition-duration);
+
+    &.activity-center-mobile--active {
+        & .term-timing {
+            max-height: 0;
+            padding-top: 0;
+            opacity: 0;
+            overflow: hidden;
+            // background-color: red;
+        }
+    }
+
+    &--active {
+        top: 12%;
+        width: 90%;
+        max-height: 1000px;
+    }
+
+    .term-timing {
+        // height: calc((var(--header-height) - var(--padding)) - (var(--padding) / 2));
+        padding-top: calc(calc((var(--header-height) - var(--padding)) - (var(--padding) / 2)) / 4);
+        opacity: 0.5;
+        transition: 
+        padding-top var(--transition-duration),
+        opacity calc(var(--transition-duration) / 4),
+        width var(--transition-duration),
+        ;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .mobile-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: calc(var(--padding) * 2);
+        width: 100%;
+
+        > * {
+            width: 100%;
+            // border: 2px solid red;
+        }
+
+        &__seperator {
+            margin: 10px 0;
+            border: none;
+            border-color: gray;
+            border-width: 0.1px;
+            border-style: solid;
+        }
+
+        &__hotkeys {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: var(--gap);
+
+            > i {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: var(--border-raduis-xmed);
+                width: var(--size-xmed);
+                height: var(--size-xmed);
+                background-color: var(--clr-primary-100);
+                color: var(--clr-white);
+                font-size: 1.1rem;
+            }
+        }
+
+        &__btn {
+            padding: 10px 0;
+            background-color: var(--clr-primary-100);
+            color: var(--clr-white);
+            border-radius: var(--border-raduis-xmed);
+        }
+
+        &__uploaded-btn {
+            background-color: transparent;
+            display: flex;
+            gap: var(--gap);
+            align-items: center;
+            justify-content: center;
+            width: fit-content;
+            font-size: 0.8rem;
+            margin-top: 10px;
+        }
+
+        &__uploaded-files {
+            display: flex;
+            flex-direction: column;
+            // border: 2px solid red;
+            // background-color: red;
+            gap: calc(var(--gap) / 2);
+            max-height: 0;
+            transition: max-height var(--transition-duration);
+            overflow-y: hidden;
+
+            li {
+                &:first-child {
+                    margin-top: 10px;
+                }
+                margin-top: 5px;
+                width: 100%;
+                background-color: #fff;
+                display: flex;
+                align-items: center;
+                padding: 5px;
+                border-radius: 5px;
+
+                img {
+                    width: var(--size-sm);
+                    height: var(--size-sm);
+                }
+
+                span {
+                    margin-left: 10px;
+                }
+
+                i {
+                    margin: 0 10px 0 auto;
+                }
+            }
         }
     }
 }
