--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -312,6 +312,11 @@ header.header {
         display: none;
     }
 
+    & *{
+        flex-shrink: 0;
+        overflow-x: hidden;
+    }
+
     background-color: rgb(0 0 0 / 0.2);
     top: calc(var(--padding) / 2);
     left: 50%;
